--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -7,8 +8,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /*background-color: #282c34;*/
   min-height: 5vh;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -26,7 +28,7 @@
 .App-header>ul>li>a {
   text-transform: uppercase;
   text-decoration: none;
-  color: #CDD0D0;
+  color: white;
   padding: 20px;
   display: inline-block;
   font-size: calc(4px + 2vmin);
